--- a/mission.html
+++ b/mission.html
@@ -2,21 +2,12 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>ClaimWrit – Our Mission & Expertise</title>
-
-  <!-- Shared styles -->
   <link rel="stylesheet" href="styles.css" />
+  <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap" rel="stylesheet" />
 
-  <!-- Accessible focus styling -->
   <style>
-    a:focus,
-    button:focus,
-    input:focus,
-    textarea:focus,
-    select:focus {
-      outline: none;
-    }
     :focus-visible {
       outline: 2px dashed #bfa15d;
       outline-offset: 3px;
@@ -25,30 +16,26 @@
 </head>
 
 <body>
-  <!-- NAVIGATION -->
-  <nav class="nav-bar">
-    <ul>
-      <li><a href="index.html" class="nav-link">Home</a></li>
-      <li><a href="mission.html" class="nav-link active">Our Mission</a></li>
-      <li><a href="services.html" class="nav-link">How We Help</a></li>
-      <li><a href="sample-request.html" class="nav-link">Sample Request</a></li>
-      <li><a href="contact.html" class="nav-link">Contact</a></li>
-      <li><a href="client-upload.html" class="nav-link">Client Upload</a></li>
-    </ul>
-  </nav>
-
-  <!-- LOGO + TAGLINE -->
+  <!-- HEADER -->
   <header class="logo-header">
-    <img
-      src="images/ClaimWrit-Logo.jpg"
-      alt="ClaimWrit Logo — Clarity · Structure · Resolution"
-      class="logo"
-    />
+    <img src="images/ClaimWrit-Logo.jpg" alt="ClaimWrit Logo" class="logo-image" />
     <p class="subline">Clarity · Structure · Resolution</p>
   </header>
 
+  <!-- NAVIGATION -->
+  <nav class="nav-bar">
+    <ul>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="mission.html" class="active">Our Mission</a></li>
+      <li><a href="services.html">How We Help</a></li>
+      <li><a href="sample-request.html">Sample Request</a></li>
+      <li><a href="contact.html">Contact</a></li>
+      <li><a href="client-upload.html">Client Portal</a></li>
+    </ul>
+  </nav>
+
   <!-- MAIN CONTENT -->
-  <main id="mission" class="section">
+  <main class="section">
     <h2>Our Mission &amp; Expertise</h2>
 
     <h3>Our Commitment to Legal Precision</h3>
@@ -87,7 +74,7 @@
 
   <!-- FOOTER -->
   <footer class="site-footer">
-    <p>© 2025 ClaimWrit d/b/a Envisage Companies LLC · Fort Lauderdale, FL</p>
+    <p>© 2020 ClaimWrit dba Envisage Companies LLC · Fort Lauderdale, FL</p>
     <p><a href="privacy-policy.html">Privacy Policy</a></p>
   </footer>
 </body>
