--- a/client-upload.html
+++ b/client-upload.html
@@ -2,342 +2,80 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width,initial-scale=1">
-  <title>Secure Client Portal – ClaimWrit</title>
-
-  <!-- Font Awesome & Google Fonts -->
-  <link
-    rel="stylesheet"
-    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
-  >
-  <link
-    href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700&display=swap"
-    rel="stylesheet"
-  >
-
-  <style>
-    /* Remove default blue outlines; keep focus-visible */
-    a:focus, button:focus, input:focus, select:focus, textarea:focus {
-      outline: none;
-    }
-    :focus-visible {
-      outline: 2px dashed #bfa15d;
-      outline-offset: 4px;
-    }
-
-    /* Base */
-    * { margin:0; padding:0; box-sizing:border-box; }
-    :root {
-      --primary: #2c3e50;
-      --secondary: #3498db;
-      --accent: #e74c3c;
-      --light: #ecf0f1;
-      --dark: #34495e;
-      --text: #2c3e50;
-      --gray: #95a5a6;
-      --white: #ffffff;
-      --success: #27ae60;
-    }
-    body {
-      font-family: 'Open Sans', sans-serif;
-      color: var(--text);
-      background: var(--white);
-      line-height: 1.6;
-    }
-    .container {
-      width: 90%;
-      max-width: 1200px;
-      margin: auto;
-      padding: 0 15px;
-    }
-    .btn {
-      display: inline-block;
-      background: var(--secondary);
-      color: var(--white);
-      padding: 12px 25px;
-      border-radius: 4px;
-      text-decoration: none;
-      font-weight: 600;
-      transition: all .3s ease;
-      cursor: pointer;
-      border: none;
-    }
-    .btn:hover {
-      background: var(--dark);
-      transform: translateY(-3px);
-      box-shadow: 0 5px 15px rgba(0,0,0,.1);
-    }
-    .btn-accent { background: var(--accent); }
-    .btn-light {
-      background: var(--light);
-      color: var(--dark);
-    }
-    .btn-light:hover { background: #d5dbdb; }
-
-    /* Header */
-    header {
-      background: var(--primary);
-      position: fixed;
-      top: 0; left: 0; right: 0;
-      z-index: 1000;
-      box-shadow: 0 2px 10px rgba(0,0,0,.1);
-    }
-    .header-container {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      padding: 15px 0;
-    }
-    .logo {
-      font-family: 'Roboto', sans-serif;
-      font-size: 1.8rem;
-      font-weight: 700;
-      color: var(--white);
-      text-decoration: none;
-    }
-    .logo span { color: var(--secondary); }
-    nav ul {
-      display: flex;
-      list-style: none;
-    }
-    nav ul li {
-      margin-left: 25px;
-    }
-    nav ul li a {
-      color: var(--light);
-      text-decoration: none;
-      font-weight: 600;
-      position: relative;
-      padding: 5px 0;
-      transition: color .3s ease;
-    }
-    nav ul li a:after {
-      content: '';
-      position: absolute;
-      bottom: 0; left: 0;
-      height: 2px;
-      width: 0;
-      background: var(--secondary);
-      transition: width .3s ease;
-    }
-    nav ul li a:hover,
-    nav ul li a.active {
-      color: var(--secondary);
-    }
-    nav ul li a:hover:after,
-    nav ul li a.active:after {
-      width: 100%;
-    }
-    .mobile-menu-btn {
-      display: none;
-      background: none;
-      border: none;
-      color: var(--white);
-      font-size: 1.5rem;
-      cursor: pointer;
-    }
-
-    /* Portal Section */
-    .portal-section {
-      padding: 120px 0 60px;
-      background: var(--light);
-      min-height: calc(100vh - 70px);
-    }
-    .portal-container {
-      max-width: 800px;
-      margin: auto;
-      background: var(--white);
-      border-radius: 8px;
-      box-shadow: 0 5px 20px rgba(0,0,0,.1);
-      overflow: hidden;
-    }
-    .portal-header {
-      background: var(--primary);
-      color: var(--white);
-      text-align: center;
-      padding: 30px;
-    }
-    .portal-header h2 {
-      margin-bottom: 10px;
-      font-size: 2rem;
-    }
-    .portal-content {
-      padding: 40px;
-    }
-    .upload-container {
-      text-align: center;
-      border: 2px dashed var(--gray);
-      border-radius: 8px;
-      padding: 40px 20px;
-      margin-bottom: 30px;
-      cursor: pointer;
-      transition: all .3s ease;
-      position: relative;
-    }
-    .upload-container:hover {
-      border-color: var(--secondary);
-      background: rgba(52,152,219,.05);
-    }
-    .upload-icon {
-      font-size: 3rem;
-      color: var(--secondary);
-      margin-bottom: 15px;
-    }
-    .success-message {
-      display: none;
-      background: var(--success);
-      color: var(--white);
-      padding: 30px;
-      border-radius: 8px;
-      text-align: center;
-    }
-    .success-message i {
-      font-size: 3rem;
-      margin-bottom: 20px;
-      display: block;
-    }
-    .security-features {
-      display: flex;
-      flex-wrap: wrap;
-      gap: 30px;
-      justify-content: center;
-      margin-top: 30px;
-    }
-    .security-item {
-      display: flex;
-      align-items: center;
-      gap: 10px;
-      color: var(--gray);
-    }
-    .form-group {
-      margin-bottom: 20px;
-      text-align: left;
-    }
-    .form-group label {
-      display: block;
-      margin-bottom: 8px;
-      font-weight: 600;
-    }
-    .form-group input,
-    .form-group textarea,
-    .form-group select {
-      width: 100%;
-      padding: 12px 15px;
-      border: 1px solid #ddd;
-      border-radius: 4px;
-      font-size: 1rem;
-    }
-
-    /* Footer */
-    footer {
-      background: var(--dark);
-      color: var(--light);
-      text-align: center;
-      padding: 40px 0 20px;
-    }
-
-    /* Responsive */
-    @media (max-width:768px) {
-      .mobile-menu-btn { display: block; }
-      nav { position: fixed; top: 70px; left: -100%; width: 80%; height: calc(100vh - 70px); background: var(--dark); transition: left .3s ease; padding: 20px; }
-      nav.active { left: 0; }
-      nav ul { flex-direction: column; }
-      nav ul li { margin: 15px 0; }
-    }
-  </style>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Client Portal - ClaimWrit</title>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-
-  <!-- Header + Nav -->
-  <header>
-    <div class="container header-container">
-      <a href="index.html" class="logo">CLAIM<span>WRIT</span></a>
-      <button class="mobile-menu-btn" aria-label="Toggle menu">
-        <i class="fas fa-bars"></i>
-      </button>
-      <nav>
-        <ul>
-          <li><a href="index.html">Home</a></li>
-          <li><a href="our-mission.html">Our Mission &amp; Expertise</a></li>
-          <li><a href="how-we-help.html">How We Help</a></li>
-          <li><a href="request-sample.html">Request Sample Demand</a></li>
-          <li><a href="client-upload.html" class="active">Client Portal</a></li>
-          <li><a href="contact.html">Contact</a></li>
-        </ul>
-      </nav>
-    </div>
+  <!-- HEADER -->
+  <header class="logo-header">
+    <img src="images/ClaimWrit-Logo.jpg" alt="ClaimWrit Logo" class="logo-image" />
+    <p class="subline">Clarity · Structure · Resolution</p>
   </header>
 
-  <!-- Secure Portal Section -->
-  <section class="portal-section">
-    <div class="portal-container">
-      <div class="portal-header">
-        <h2>Secure Client Upload</h2>
-        <p>Encrypted, HIPAA-compliant file submission</p>
-      </div>
-      <div class="portal-content">
-        <div class="upload-container" id="upload-container">
-          <i class="fas fa-upload upload-icon"></i>
-          <p>Drag &amp; drop files here, or click to select</p>
-          <input type="file" id="file-input" multiple style="display:none;">
-        </div>
+  <!-- NAVIGATION -->
+  <nav class="nav-bar">
+    <ul>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="mission.html">Our Mission</a></li>
+      <li><a href="services.html">How We Help</a></li>
+      <li><a href="sample-request.html">Sample Request</a></li>
+      <li><a href="contact.html">Contact</a></li>
+      <li><a href="client-upload.html" class="active">Client Portal</a></li>
+    </ul>
+  </nav>
 
-        <button class="btn-accent" id="upload-btn">Upload Files</button>
+  <!-- MAIN CONTENT -->
+  <main class="container">
+    <h1>ClaimWrit Secure Upload Portal</h1>
+    <p>Upload your Demand Package documents with confidence.</p>
+    
+    <div class="upload-container">
+      <aside class="upload-checklist">
+        <h3>🗂 Submission Checklist</h3>
+        <p>Ensure your files include:</p>
+        <ul>
+          <li>✔ Police Report</li>
+          <li>✔ Medical Bills & Records</li>
+          <li>✔ Proof of Insurance</li>
+          <li>✔ Signed HIPAA Authorization</li>
+        </ul>
+        <a class="checklist-link" href="checklist/00_DEMAND_PACKAGE_SUBMISSION_CHECKLIST.pdf" target="_blank">📥 Download Full Checklist (PDF)</a>
+      </aside>
 
-        <div class="success-message" id="success-message">
-          <i class="fas fa-check-circle"></i>
-          <p>Your files have been uploaded successfully!</p>
-        </div>
+      <section class="upload-form">
+        <form action="upload.php" method="POST" enctype="multipart/form-data">
+          <div class="form-group">
+            <label>Client Full Name – DOA:
+              <input type="text" name="folder" placeholder="e.g., Maria Lopez – DOA 03/14/2022" required />
+            </label>
+          </div>
 
-        <div class="security-features">
-          <div class="security-item"><i class="fas fa-lock"></i><span>TLS Encryption</span></div>
-          <div class="security-item"><i class="fas fa-shield-alt"></i><span>AES-256 Storage</span></div>
-          <div class="security-item"><i class="fas fa-user-shield"></i><span>HIPAA-Compliant</span></div>
-        </div>
-      </div>
+          <div class="form-group">
+            <label>Your Email (confirmation sent to this address):
+              <input type="email" name="email" placeholder="e.g., you@lawfirm.com" required />
+            </label>
+          </div>
+
+          <div class="form-group">
+            <label>Select Files:
+              <input type="file" name="files[]" multiple required />
+            </label>
+          </div>
+
+          <button type="submit" class="btn-submit">Upload to ClaimWrit</button>
+        </form>
+
+        <p><a href="request-access.html">Request Attorney Access</a> if you do not have login credentials.</p>
+      </section>
     </div>
-  </section>
+  </main>
 
-  <!-- Footer -->
-  <footer>
-    <p>© 2025 ClaimWrit d/b/a Envisage Companies LLC · Fort Lauderdale, FL</p>
+  <!-- FOOTER -->
+  <footer class="site-footer">
+    <p>© 2020 ClaimWrit dba Envisage Companies LLC · Fort Lauderdale, FL</p>
+    <p><a href="privacy-policy.html">Privacy Policy</a></p>
   </footer>
-
-  <!-- Optional JS for mobile menu & file upload demo -->
-  <script>
-    // Mobile menu toggle
-    document.querySelector('.mobile-menu-btn').addEventListener('click', () => {
-      document.querySelector('nav').classList.toggle('active');
-    });
-
-    // Demo upload interaction
-    const uploadContainer = document.getElementById('upload-container');
-    const fileInput       = document.getElementById('file-input');
-    const uploadBtn       = document.getElementById('upload-btn');
-    const successMsg      = document.getElementById('success-message');
-
-    uploadContainer.addEventListener('click', () => fileInput.click());
-    uploadContainer.addEventListener('dragover', e => {
-      e.preventDefault();
-      uploadContainer.classList.add('dragover');
-    });
-    uploadContainer.addEventListener('dragleave', () => {
-      uploadContainer.classList.remove('dragover');
-    });
-    uploadContainer.addEventListener('drop', e => {
-      e.preventDefault();
-      uploadContainer.classList.remove('dragover');
-      fileInput.files = e.dataTransfer.files;
-    });
-
-    uploadBtn.addEventListener('click', () => {
-      if (fileInput.files.length) {
-        // Simulate upload...
-        successMsg.style.display = 'block';
-      } else {
-        alert('Please select files first');
-      }
-    });
-  </script>
 </body>
 </html>
